k8s/apps/synology/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Synology
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/name: Synology DiskStation
    gethomepage.dev/description: NAS
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Synology
    gethomepage.dev/icon: synology-dsm.png
    gethomepage.dev/pod-selector: ""
spec:
  rules:
    - host: &host dsm.mdeleon.dev
      http:
        paths:
          - backend:
              service:
                name: dsm # not used
                port:
                  number: 5000 # not used
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: dsm-tls-cert

  externalIPs:
    - 192.168.1.200
